--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <div class="skill-card">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/powerbi.svg" alt="Power BI Logo" class="skill-logo">
       <h3 class="skill-title">Power BI</h3>
+	  
     </div>
     <div class="skill-card">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/mysql.svg" alt="SQL Logo" class="skill-logo">
@@ -229,10 +230,15 @@
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 				<a href="#" class="image fit thumb project-link" data-target="modal5">
-					<img src="images/thumbs/05.jpg" alt="Nunc enim commodo aliquet" style="width:300px;height:200px;object-fit:cover;">
+					<img src="images/fulls/apple-image.jpg" alt="Apple Financial visualization" style="width:300px;height:200px;object-fit:cover;">
 				</a>
-				<h3>Nunc enim commodo aliquet</h3>
-				<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+				<h3>Apple Financial visualization</h3>
+				<p>
+					<strong style="color: black; background-color: rgb(137, 118, 118);"> Power BI </strong>, 
+					<strong style="color: black; background-color: lightgreen;"> Data Visualization </strong>,
+					<strong style="color: black; background-color: rgb(137, 118, 118);"> DAX </strong>
+
+				</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 				<a href="#" class="image fit thumb project-link" data-target="modal6">
@@ -281,13 +287,14 @@
 				<h3>Web Scrapping project based on armed.forcedeu website</h3>
 				<p>A Python-based web scraping project targeting the armed.forcedeu website, involving data cleaning and analysis to extract relevant military data.</p>
 				<a href="LEBOULCH-army.pdf" class="button" target="_blank">View PDF</a>
+				<a href="Graphique de réseaux.pdf" class="button" target="_blank">View PDF</a>
 				</div>
 			</div>
 
 			<div id="modal5" class="modal">
 				<div class="modal-content">
 				<span class="close">&times;</span>
-				<h3>Nunc enim commodo aliquet</h3>
+				<h3>Apple Financial visualization</h3>
 				<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat. This is a placeholder project description.</p>
 				<a href="images/fulls/05.jpg" class="button" target="_blank">View Image</a>
 				</div>
