modified:   index.html renamed:    CV Quentin Le Boulch_1.pdf -> pdf/CV Quentin Le Boulch_1.pdf renamed:    CV Quentin Le Boulch_EN_1.pdf -> pdf/CV Quentin Le Boulch_EN_1.pdf renamed:    R_Project.pdf -> pdf/R_Project.pdf

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<p>I am Quentin Le Boulch, currently in my final year of studies while completing an apprenticeship as a Data Manager at Thales. Passionate about data analysis and its role in shaping strategic decisions, I enjoy tackling challenges at the crossroads of technology, industry, and banking. Proactive and solution-driven, I am eager to contribute to impactful projects and grow within data-driven environments.</p>
 				<ul class="actions">
 					<li>
-						<a href="CV Quentin Le Boulch_1.pdf" class="cv-link" target="_blank" data-lang="fr">
+						<a href="pdf/CV Quentin Le Boulch_1.pdf" class="cv-link" target="_blank" data-lang="fr">
 							<img src="https://flagcdn.com/32x24/fr.png" alt="French CV" class="flag">
 							<span class="flag-label">CV FR</span>
 						</a>
