modified:   index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="CV Quentin Le Boulch_EN_1.pdf" class="cv-link" target="_blank" data-lang="en">
+						<a href="pdf/CV Quentin Le Boulch_EN_1.pdf" class="cv-link" target="_blank" data-lang="en">
 							<img src="https://flagcdn.com/32x24/gb.png" alt="English CV" class="flag">
 							<span class="flag-label">CV EN</span>
 						</a>
