deleted:    LEBOULCH-army.pdf 	renamed:    Potability_Quentin_Nico.html -> html/Potability_Quentin_Nico.html 	deleted:    images/fulls/01.jpg 	deleted:    images/fulls/02.jpg 	deleted:    images/fulls/03.jpg 	deleted:    images/fulls/04.jpg 	deleted:    images/fulls/05.jpg 	deleted:    images/fulls/06.jpg 	renamed:    67ce9a36dddfa-Stata.svg -> images/fulls/67ce9a36dddfa-Stata.svg 	new file:   images/fulls/CV Quentin Le Boulch copy.pptx 	new file:   images/fulls/Diagram etl-ETL.jpg 	new file:   images/fulls/Excel logo copy.png 	new file:   images/fulls/apple background.png 	new file:   images/fulls/apple_dashboard1.png 	new file:   images/fulls/apple_dashboard_2.png 	new file:   images/fulls/armed_force.png 	new file:   images/fulls/erd.png 	new file:   images/fulls/introR.png 	new file:   "images/fulls/m\303\251moire_back.png" 	new file:   "images/fulls/m\303\251moire_image.png" 	new file:   images/fulls/referential.png 	new file:   images/fulls/water_.png 	modified:   index.html 	new file:   pdf/Apple_Financial_Analysis (1).pdf 	renamed:    "m\303\251moire_m1.pdf" -> "pdf/m\303\251moire_m1.pdf" 	new file:   pptx/Network-modeop.pptx

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 						</div>
 						<div class="modal-buttons">
 							<a href="https://qntn00.github.io/webscrapp---armed-force---Trade-Network/" class="button" target="_blank">View Main Report</a>
-							<a href="Network-modeop.pptx" class="button" target="_blank">View Network Analysis</a>
+							<a href="pptx/Network-modeop.pptx" class="button" target="_blank">View Network Analysis</a>
 						</div>
 					</div>
 				</div>
@@ -370,7 +370,7 @@
 					</div>
 					<div class="modal-buttons">
 						<a href="https://app.powerbi.com/reportEmbed?reportId=565ee4f3-12d1-4dbe-9476-3d351e8fac54&autoAuth=true&ctid=bc20447d-8952-4acd-83e4-5d68b5ece46f&actionBarEnabled=true" class="button" target="_blank">View Dashboard</a>
-						<a href="Apple_Financial_Analysis (1).pdf" class="button" target="_blank">View pdf dashboard</a>
+						<a href="pdf/Apple_Financial_Analysis (1).pdf" class="button" target="_blank">View pdf dashboard</a>
 					</div>
 				</div>
 				
@@ -396,7 +396,7 @@
 							</p>
 						</div>
 						<div class="modal-buttons">
-							<a href="R_Project.pdf" class="button" target="_blank">View PDF</a>
+							<a href="pdf/R_Project.pdf" class="button" target="_blank">View PDF</a>
 							<a href="https://github.com/qntn00/R_project" class="button" target="_blank">GitHub</a>
 						</div>
 					</div>
@@ -422,7 +422,7 @@
 							</p>
 						</div>
 						<div class="modal-buttons">
-							<a href="mémoire_m1.pdf" class="button" target="_blank">View PDF</a>
+							<a href="pdf/mémoire_m1.pdf" class="button" target="_blank">View PDF</a>
 						</div>
 					</div>
 				</div>
@@ -447,7 +447,7 @@
 							</p>
 						</div>
 						<div class="modal-buttons">
-							<a href="Potability_Quentin_Nico.html" class="button" target="_blank">View HTML Report</a>
+							<a href="html/Potability_Quentin_Nico.html" class="button" target="_blank">View HTML Report</a>
 						</div>
 					</div>
 				</div>
