modified:   index.html

--- a/index.html
+++ b/index.html
@@ -407,21 +407,21 @@
 						<span class="close">&times;</span>
 						<h3>Mémoire de Master : Opportunités d'emploi salarié et création d'entreprises</h3>
 						<div class="explanation">
-							<p>
-								Une recherche approfondie explorant la relation entre le chômage et l'entrepreneuriat, analysant si les difficultés d'emploi poussent vers la création d'entreprise.
-							</p>
-							<h4>Méthodologie Économétrique</h4>
-							<p>
-								Cette étude utilise Stata pour analyser des données longitudinales, appliquant des modèles économétriques avancés pour identifier les facteurs déterminants de la création d'entreprise.
-							</p>
-							<p>
-								L'analyse comprend le nettoyage de données complexes, la modélisation statistique avec contrôles de robustesse, et l'interprétation d'effets causaux dans un contexte économique.
-							</p>
-							<p>
-								Les résultats révèlent des patterns significatifs dans la relation chômage-entrepreneuriat, avec des implications importantes pour les politiques publiques d'emploi.
-							</p>
+						<h4>Résumé</h4>
+						<p>
+							Ce mémoire explore les déterminants de la création d'entreprise en se concentrant sur la motivation des entrepreneurs liée à leurs opportunités d'emploi. En retraçant la littérature sur les entrepreneurs motivés par opportunité et par nécessité, nous avons vu que ces deux types d’entrepreneurs sont identifiés par leur statut antérieur à la phase de création (Fairlie & Fossen, 2018).
+						</p>
+						<p>
+							Notre étude remet en question cette identification des entrepreneurs d'opportunité et de nécessité, soulignant l'importance d'une approche nuancée basée sur les options d'emploi réelles. Nous travaillons sur les données de l'Enquête Emploi en continu (INSEE) en France.
+						</p>
+						<p>
+							Nous avons utilisé la méthodologie de l’Outside Option Index (OOI) développée par Caldwell et Danieli (2020) pour mesurer les opportunités extérieures des individus sur le marché du travail. Nos résultats indiquent que les chômeurs avec une Outside Option plus élevée ont une probabilité légèrement plus élevée de se lancer dans l’entreprenariat.
+						</p>
+						<p>
+							En revanche, une Outside Option élevée pour les salariés semble réduire leur volonté à devenir entrepreneurs et créer leur entreprise.
+						</p>
 						</div>
-						<div class="modal-buttons">
+												<div class="modal-buttons">
 							<a href="pdf/mémoire_m1.pdf" class="button" target="_blank">View PDF</a>
 						</div>
 					</div>
